[gd_scene load_steps=6 format=3 uid="uid://cb2b3a4e5w2mb"]

[ext_resource type="Script" path="res://addons/simple_message_spawner/sms_message.gd" id="1_g28vo"]
[ext_resource type="Theme" uid="uid://bce8trn6jgasu" path="res://addons/simple_message_spawner/resources/sms_message_theme.tres" id="1_lapq8"]
[ext_resource type="Script" path="res://addons/simple_message_spawner/resources/sms_message_move_config.gd" id="2_g5dls"]

[sub_resource type="Resource" id="Resource_i1up0"]
script = ExtResource("2_g5dls")
to_panel_container_colour = Color(0, 0, 1, 1)
to_text_colour = Color(1, 1, 1, 1)
change_duration = 0.5
move_duration = 3.0
move_tween_transition_type = 7
move_tween_ease_type = 0
change_tween_transition_type = 0
change_tween_ease_type = 0

[sub_resource type="Resource" id="Resource_w80ir"]
script = ExtResource("2_g5dls")
to_panel_container_colour = Color(1, 1, 1, 0)
to_text_colour = Color(1, 1, 1, 0)
change_duration = 0.5
move_duration = 3.0
move_tween_transition_type = 7
move_tween_ease_type = 0
change_tween_transition_type = 0
change_tween_ease_type = 0

[node name="SMSMessage" type="PanelContainer"]
top_level = true
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 22.0
grow_horizontal = 2
mouse_filter = 1
theme = ExtResource("1_lapq8")
script = ExtResource("1_g28vo")
start_panel_container_colour = Color(0, 0, 0.945098, 0.968627)
start_text_colour = Color(0.745098, 0.745098, 0.745098, 1)
display_message_config = SubResource("Resource_i1up0")
exit_message_config = SubResource("Resource_w80ir")
display_time = 12.0
handle_mouse_clicks = true

[node name="MessageSound" type="AudioStreamPlayer" parent="."]

[node name="MessageMarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MessageLabel" type="Label" parent="MessageMarginContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 20
text = "This is an annoying message!"
autowrap_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
